fixed mobile gap

--- a/src/css/heroSection.css
+++ b/src/css/heroSection.css
@@ -22,7 +22,7 @@ canvas {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   background-color: rgba(0, 0, 0, 0.4);
   z-index: -1;
 }
